Заменил логику выбора периода

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -510,3 +510,15 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
+
+.time {
+  width: 88px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.textForm{
+  width: 200px;
+  border-radius: 5px;
+}
+
